# DGA_Challenge_Multi_Robot_Control

./: ReadMe.md
multi-robot/: CMakeLists.txt  package.xml
multi-robot/launch/: multi_robot_control.launch
multi-robot/rviz/: drone.rviz
multi-robot/src/multi-robot/src/: config.py  dron_path.py  drone_camera.py  drone_detect_person.py  drone_hover.py  drone_kinect.py  drone_navigation.py  get_drone_position.py  get_position.py  get_robot_position.py  husky_planner.py  infrared_detector.py  kill_drone.py  kill_zones.py  move_drone.py  plot_path.py  robot_camera.py  robot_kinect.py  server.py
multi-robot/worlds/: mars.world
yolo/: CMakeLists.txt  package.xml
yolo/src/: models.py  yolo_ros.py
