<?xml version="1.0"?>
<package format="2">
  <name>yolo</name>
  <version>0.1.0</version>
  <description>The YOLOv3 PyTorch ROS wrapper package</description>

  <maintainer email="vvasilo@seas.upenn.edu">Vasileios Vasilopoulos</maintainer>
  <maintainer email="pavlakos@seas.upenn.edu">Georgios Pavlakos</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

</package>